--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 exceptiongroup==1.2.0
 fastapi==0.104.1
+greenlet==3.0.2
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
