--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm+all,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm+all,django
-
+certs/jwt-private.pem
+certs/jwt-public.pem
 ### Django ###
 *.log
 *.pot
