--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.6.0
 anyio==3.7.1
 async-timeout==4.0.3
 asyncpg==0.29.0
+bcrypt==4.1.1
 billiard==4.2.0
 celery==5.3.6
 click==8.1.7
