--- a/requirements.txt
+++ b/requirements.txt
@@ -7,22 +7,34 @@ asyncpg==0.29.0
 bcrypt==4.1.1
 billiard==4.2.0
 celery==5.3.6
+cffi==1.16.0
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+cryptography==41.0.7
+dnspython==2.4.2
+email-validator==2.0.0.post2
 exceptiongroup==1.2.0
 fastapi==0.104.1
-greenlet==3.0.2
+fastapi-users==12.1.2
+fastapi-users-db-sqlalchemy==6.0.1
+flower==2.0.1
+greenlet==3.0.1
 h11==0.14.0
 httptools==0.6.1
+humanize==4.9.0
 idna==3.6
 kombu==5.3.4
+makefun==1.15.2
 Mako==1.3.0
 MarkupSafe==2.1.3
 mypy==1.7.1
 mypy-extensions==1.0.0
+passlib==1.7.4
+prometheus-client==0.19.0
 prompt-toolkit==3.0.41
+pycparser==2.21
 pydantic==2.5.2
 pydantic-settings==2.1.0
 pydantic_core==2.14.5
@@ -30,6 +42,8 @@ PyJWT==2.8.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-http-client==3.3.7
+python-multipart==0.0.6
+pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
 sendgrid==6.11.0
@@ -40,6 +54,7 @@ sqlalchemy-stubs==0.4
 starkbank-ecdsa==2.2.0
 starlette==0.27.0
 tomli==2.0.1
+tornado==6.4
 typing_extensions==4.8.0
 tzdata==2023.3
 uvicorn==0.24.0.post1
