connected liqpay for payments

--- a/env.sample
+++ b/env.sample
@@ -9,3 +9,5 @@ SENDGRID_API_KEY=string
 DEFAULT_FROM_EMAIL=string
 PASSWORD_RESET_TEMPLATE_ID=string
 REGISTRATION_CONFIRMATION_TEMPLATE_ID=string
+LIQPAY_PUBLIC_KEY=string
+LIQPAY_PRIVATE_KEY=string
