--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ billiard==4.2.0
 celery==5.3.6
 certifi==2023.11.17
 cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -29,6 +30,7 @@ httpx==0.25.2
 humanize==4.9.0
 idna==3.6
 kombu==5.3.4
+liqpay-python @ git+https://github.com/liqpay/sdk-python@be76c77acafe321cacdad8cb585ea0eb28a87038
 makefun==1.15.2
 Mako==1.3.0
 MarkupSafe==2.1.3
@@ -49,6 +51,7 @@ python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
+requests==2.31.0
 sendgrid==6.11.0
 six==1.16.0
 sniffio==1.3.0
@@ -60,6 +63,7 @@ tomli==2.0.1
 tornado==6.4
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.1.0
 uvicorn==0.24.0.post1
 uvloop==0.19.0
 vine==5.1.0
