connected nova posta and added endpoint for getting warehouses

--- a/env.sample
+++ b/env.sample
@@ -11,3 +11,4 @@ PASSWORD_RESET_TEMPLATE_ID=string
 REGISTRATION_CONFIRMATION_TEMPLATE_ID=string
 LIQPAY_PUBLIC_KEY=string
 LIQPAY_PRIVATE_KEY=string
+NOVA_POSTA_KEY=string
